[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/weapons/bullet.gd" type="Script" id=1]
[ext_resource path="res://sprites/white_light.png" type="Texture" id=2]
[ext_resource path="res://sprites/white.png" type="Texture" id=3]
[ext_resource path="res://addons/extended_collision_polygon_2D/extended_collision_polygon_2D.gd" type="Script" id=4]
[ext_resource path="res://addons/extended_collision_polygon_2D/polygon.svg" type="Texture" id=5]

[node name="bullet" type="Area2D" index="0"]

input_pickable = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = -1.0
angular_damp = -1.0
collision_layer = 4
collision_mask = 3105
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pickable", "Transform" ]
velocity = Vector2( 2048, 0 )
decay_time = 10
damage = 1

[node name="Sprite" type="Sprite" parent="." index="0"]

visible = false
scale = Vector2( 0.045, 0.045 )
texture = ExtResource( 2 )

[node name="decay_timer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 10.0
one_shot = true
autostart = true

[node name="Light2D" type="Light2D" parent="." index="2" groups=[
"auto_light",
]]

scale = Vector2( 0.48, 0.48 )
enabled = false
editor_only = false
texture = ExtResource( 2 )
offset = Vector2( 0, 0 )
texture_scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite2" type="Sprite" parent="." index="3"]

scale = Vector2( 0.0458333, 0.00740741 )
texture = ExtResource( 3 )

[node name="ExtendedCollisionPolygon2D" type="CollisionPolygon2D" parent="." index="4"]

build_mode = 0
polygon = PoolVector2Array( -27, 3, -27, -3, 27, -3, 27, 3 )
script = ExtResource( 4 )
__meta__ = {
"_editor_icon": ExtResource( 5 )
}

[connection signal="area_entered" from="." to="." method="on_area_entered"]

[connection signal="body_entered" from="." to="." method="on_body_entered"]

[connection signal="timeout" from="decay_timer" to="." method="decay_timer_timeout"]


